@@ -22,6 +22,8 @@ import com.redhat.rhn.domain.user.User;
 
 import com.suse.manager.utils.MailHelper;
 
+import org.apache.logging.log4j.Logger;
+
 /**
  * BaseMailAction - basic abstract class to encapsulate some common Action logic.
  */
@@ -37,7 +39,12 @@ public abstract class BaseMailAction {
      */
     public void execute(EventMessage msg) {
         BaseEvent aevt = (BaseEvent) msg;
-        MailHelper.withMailer(getMail()).sendEmail(getRecipients(aevt.getUser()), getSubject(aevt), msg.toText());
+        try {
+            MailHelper.withMailer(getMail()).sendEmail(getRecipients(aevt.getUser()), getSubject(aevt), msg.toText());
+        }
+        catch (Exception e) {
+            getLogger().error("Unable to configure a mailer: {}", e.getMessage(), e);
+        }
     }
 
     /**
@@ -45,17 +52,25 @@ public abstract class BaseMailAction {
      * @return the mailer associated with this class
      */
     protected Mail getMail() {
-        String clazz = Config.get().getString(
-                "web.mailer_class");
+        String clazz = Config.get().getString("web.mailer_class");
         if (clazz == null) {
             return new SmtpMail();
         }
         try {
-            Class cobj = Class.forName(clazz);
-            return (Mail) cobj.newInstance();
+            Class<? extends Mail> cobj = Class.forName(clazz).asSubclass(Mail.class);
+            return cobj.getDeclaredConstructor().newInstance();
         }
-        catch (Exception e) {
+        catch (Exception | LinkageError e) {
+            getLogger().error("An exception was thrown while initializing custom mailer class", e);
             return new SmtpMail();
         }
     }
+
+    /**
+     * Get the Logger for the derived class so log messages show up on the
+     * correct class
+     * @return Logger for this class.
+     */
+    protected abstract Logger getLogger();
+
 }
